# QuarkLauncher

./: .gitignore  Doxyfile
QuarkLauncher/: CMakeLists.txt  QuarkLauncher_el_GR.ts  console.cpp  console.h  console.ui  envvariables.cpp  envvariables.h  envvariables.ui  main.cpp  quarklauncher.cpp  quarklauncher.h  quarklauncher.ui
QuarkLauncher/resources/stylesheets/Quark/: stylesheet.qss
QuarkLauncher/utils/: ansiescapecodehandler.cpp  ansiescapecodehandler.h
QuarkLauncher/widgets/: quarkcheckbox.cpp  quarkcheckbox.h  quarkcontainer_groupbox.cpp  quarkcontainer_groupbox.h  quarkcontainer_widget.cpp  quarkcontainer_widget.h  quarkenv.cpp  quarkenv.h  quarkgroup.cpp  quarkgroup.h  quarkgroupbox.cpp  quarkgroupbox.h  quarklineedit.cpp  quarklineedit.h  quarkoption.cpp  quarkoption.h  quarkpathedit.cpp  quarkpathedit.h  quarkpathedit.ui
